--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.3",
     "pg": "^8.12.0",
-    "postgres": "^3.4.4"
+    "pg-hstore": "^2.3.4",
+    "postgres": "^3.4.4",
+    "sequelize": "^6.37.3"
   },
   "name": "backend",
   "version": "1.0.0",
