--- a/admin/package.json
+++ b/admin/package.json
@@ -9,7 +9,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "datatables.net-bs5": "^2.0.8",
+    "datatables.net-responsive-bs5": "^3.0.2",
+    "jquery": "^3.7.1",
     "react": "^18.3.1",
+    "react-country-region-selector": "^3.6.1",
+    "react-country-state-city": "^1.1.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
