--- a/admin/package.json
+++ b/admin/package.json
@@ -16,6 +16,7 @@
     "react-country-region-selector": "^3.6.1",
     "react-country-state-city": "^1.1.2",
     "react-dom": "^18.3.1",
+    "react-geolocated": "^4.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.11.1",
