--- a/admin/package.json
+++ b/admin/package.json
@@ -13,6 +13,7 @@
     "datatables.net-responsive-bs5": "^3.0.2",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.3",
     "react-country-region-selector": "^3.6.1",
     "react-country-state-city": "^1.1.2",
     "react-dom": "^18.3.1",
